--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write {background.js,manifest.json,server.js}"
   },
   "dependencies": {
     "mpris-service": "^2.1.0",
